# isaac_rm

./: .gitignore  README.md  require.txt  setup_env.sh
docker/: Dockerfile  README.md  build_image.sh
scripts/: _isaaclab_env.py  play.py  readme.md  train.py
sim2sim/: README.md  (+3 more)
source/chassis_nav/: pyproject.toml
source/chassis_nav/chassis_nav/: __init__.py
source/chassis_nav/chassis_nav/robots/: __init__.py  arm.py  chassis.py
source/chassis_nav/chassis_nav/tasks/: __init__.py
source/chassis_nav/chassis_nav/tasks/approach/: __init__.py  approach_env_cfg.py
source/chassis_nav/chassis_nav/tasks/approach/agents/: __init__.py  skrl_ppo_cfg.yaml
source/chassis_nav/chassis_nav/tasks/approach/mdp/: __init__.py  actions.py  curriculums.py  events.py  observations.py  rewards.py  terminations.py
source/chassis_nav/chassis_nav/tasks/lift/: __init__.py  lift_env_cfg.py
source/chassis_nav/chassis_nav/tasks/lift/agents/: skrl_ppo_cfg.yaml
source/chassis_nav/chassis_nav/tasks/lift/mdp/: __init__.py  observations.py  rewards.py
source/chassis_nav/chassis_nav/tasks/push/: __init__.py  push_env_cfg.py
source/chassis_nav/chassis_nav/tasks/push/agents/: __init__.py  skrl_ppo_cfg.yaml
source/chassis_nav/chassis_nav/tasks/push/mdp/: __init__.py  observations.py  rewards.py
source/chassis_nav/chassis_nav/tasks/reach/: __init__.py  reach_env_cfg.py
source/chassis_nav/chassis_nav/tasks/reach/agents/: skrl_ppo_cfg.yaml
source/chassis_nav/chassis_nav/tasks/reach/mdp/: __init__.py  actions.py  events.py  observations.py  rewards.py  terminations.py
(+220 files in other folders)
